# SGCIF-VAE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: attack_dnn_mstar.ipynb  defense_pgd_mstar.ipynb
training/: loss_fns.py  test.py  train_ape.py  train_cdvae.py  train_psgan.py  train_sgcif.py  train_standard.py
training/attack/: __init__.py  clean.py  cw.py  ifgsm.py  max_mat.py  multi_mat.py  pgd.py  rand_mat.py
training/dataset/: datasets.yaml  sar_dataset.py
training/model/: __init__.py
training/model/ape/: model.py
training/model/bagnet/: model.py
training/model/cd/: model.py
training/model/psgan/: model.py
training/model/sgcif/: sg.py  vig.py
training/model/standard/: __init__.py  backbone.py
training/utils/: __init__.py  eval_utils.py  hsic.py  log_utils.py  train_utils.py
